Fix tab-content spacing

--- a/themes/default/assets/src/sass/common/general/temp.sass
+++ b/themes/default/assets/src/sass/common/general/temp.sass
@@ -154,3 +154,8 @@ button.card-footer-item
 
 .field.has-addons .control:not(:last-child)
     margin-right: -$control-border-width
+
+.tabs-wrapper.is-condensed
+    .tabs:not(:last-child)
+        margin-bottom: 0.5em
+
